K8s-Manifest/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: singularity
  labels:
    name: singularity
